PlayerField little code and naming fixup, removed unused methods and useless comments